--- a/tasks/templates/tasks/add.html
+++ b/tasks/templates/tasks/add.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+{%extends "tasks/layout.html"%}
+{%block body%}
     <h1>Add Tasks</h1>
     <form>
         <input type="text" name="task">
         <input type="submit">
     </form>
-</body>
-</html>
+{%endblock%}
