--- a/tasks/templates/tasks/index.html
+++ b/tasks/templates/tasks/index.html
@@ -1,15 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tasks</title>
-</head>
-<body>
+{%extends "tasks/layout.html"%}
+
+{%block body%}
     <ul>
+        <h1>Tasks</h1>
         {%for task in tasks%}
             <li>{{task}}</li>
         {%endfor%}
     </ul>
-</body>
-</html>
+{%endblock%}
+
