--- a/tasks/templates/tasks/index.html
+++ b/tasks/templates/tasks/index.html
@@ -5,6 +5,8 @@
         <h1>Tasks</h1>
         {%for task in tasks%}
             <li>{{task}}</li>
+        {%empty%}
+            <li>No Tasks</li>
         {%endfor%}
     </ul>
     <a href="{%url 'tasks:add'%}">Add a new Task</a>
